# scratchpad

./: .gitmodules  CMakeLists.txt
cppBenchmarks/: CMakeLists.txt  constructorTest.cpp  derefTest.cpp  enableCpuScaling.sh  stringTest.cpp
cuda/: Makefile  cpuAdd.cpp  gpuAdd.cu
directionParser/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
directionParser/app/: Main.hs
directionParser/src/: Lib.hs
functionalCpp/: ch_10.cpp  ch_11.cpp  ch_12.cpp  ch_13.cpp  ch_3.cpp  ch_4.cpp  ch_5.cpp  ch_6.cpp  ch_7.cpp  ch_8.cpp  ch_9.cpp  ch_9_2.cpp  ch_9_3.cpp  ch_9_4.cpp
learnYouAHaskell/: main.hs
memory/: memory.cpp
perfPlayground/: .gitignore  CMakeLists.txt  Makefile  disableCpuScaling.sh  driverStringTest  loopTest.cpp  test  test.cpp
sorting/: rbtree.cpp  tree.cpp
